# HyperDoom

./: .gitignore  .travis.yml  LICENSE  README.md
renderer/: CMakeLists.txt  main.cpp
renderer/include/: CMakeLists.txt  const.h
renderer/include/geometry/: CMakeLists.txt  bounding_box3.h  has_bounding_box3.h  has_surface_area.h  has_volume.h  kd_tree.h  triangle3.h  triangular_mesh.h
renderer/include/math/: CMakeLists.txt  matrix3.h  vector3.h
renderer/src/: CMakeLists.txt  main.cpp
renderer/src/geometry/: CMakeLists.txt  bounding_box3.cpp  kd_tree.cpp  triangle3.cpp  triangular_mesh.cpp
renderer/src/math/: CMakeLists.txt  matrix3.cpp  vector3.cpp
renderer/test/: CMakeLists.txt
renderer/test/geometry/: CMakeLists.txt  bounding_box3_test.cpp  triangle3_test.cpp  triangular_mesh_test.cpp
renderer/test/math/: CMakeLists.txt  matrix3_test.cpp  vector3_test.cpp
